k8s/apps/influxdb/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: influxdb
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
