k8s/apps/influxdb/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb

spec:
  selector:
    app.kubernetes.io/component: influxdb
    app.kubernetes.io/instance: influxdb
    app.kubernetes.io/name: influxdb
  ports:
    - name: http
      port: 8086
      targetPort: http
    - name: rpc
      port: 8088
      targetPort: rpc
